# broadway_boogie

./: CMakeLists.txt  README.md  tmp.txt
data/: artists.csv  graph.xml  grid.txt
docs/html/: annotated.html  artist_8hpp.html  artist_8hpp_source.html  artist__factory_8hpp.html  artist__factory_8hpp_source.html  artist__manager_8hpp.html  artist__manager_8hpp_source.html  blue__state_8hpp.html  blue__state_8hpp_source.html  caretaker_8hpp.html  caretaker_8hpp_source.html  class_artist-members.html  class_artist.html  class_artist_factory-members.html  class_artist_factory.html  class_artist_manager-members.html  class_artist_manager.html  class_blue_state-members.html  class_blue_state.html  class_c_s_v_parser-members.html  class_c_s_v_parser.html  class_c_s_v_reader-members.html  class_c_s_v_reader.html  class_caretaker-members.html  class_caretaker.html  class_collision_manager-members.html  class_collision_manager.html  class_command-members.html  class_command.html  class_command_manager-members.html  class_command_manager.html  class_edge-members.html  class_edge.html  class_game-members.html  class_game.html  class_game_state_memento-members.html  class_game_state_memento.html  class_go_back_command-members.html  class_go_back_command.html  class_go_forward_command-members.html  (+168 more)
include/: test.hpp
include/domain/: artist.hpp  console_ui.hpp  edge.hpp  museum.hpp  node.hpp  node_type.hpp
include/factories/: artist_factory.hpp  museum_factory.hpp
include/managers/: artist_manager.hpp  collision_manager.hpp  command_manager.hpp  museum_manager.hpp  overlay_manager.hpp  pathfinding_manager.hpp
include/parsers/: csv_parser.hpp  xml_parser.hpp
include/presentation/: console_ui.hpp  game.hpp  sdl_facade.hpp  sdl_ttf_facade.hpp
include/readers/: csv_reader.hpp  reader.hpp  web_reader.hpp  xml_reader.hpp
src/: main.cpp  test.cpp
src/domain/: artist.cpp  console_ui.cpp  edge.cpp  (+3 more)
tests/: CMakeLists.txt
tests/data/: artists.csv  graph.xml
tests/domain/: artist_tests.cpp  edge_tests.cpp  museum_tests.cpp  node_tests.cpp  node_type_tests.cpp  test.cpp
tests/factories/: artist_factory_tests.cpp  museum_factory_tests.cpp
tests/managers/: artist_manager_tests.cpp  command_manager_tests.cpp  museum_manager_tests.cpp
tests/parsers/: csv_parser_tests.cpp  xml_parser_tests.cpp
tests/presentation/: caretaker_tests.cpp  game_tests.cpp  go_back_command_tests.cpp  go_forward_command_tests.cpp  handle_node_interaction_command_tests.cpp  load_documents_command_tests.cpp  set_pathfinding_end_command_tests.cpp  set_pathfinding_start_command_tests.cpp  toggle_artist_moving_command_tests.cpp  toggle_collision_command_tests.cpp  toggle_menu_visible_command_tests.cpp  toggle_path_collision_command_tests.cpp  toggle_pathfinding_command_tests.cpp  toggle_render_artists_command_tests.cpp  toggle_render_path_command_tests.cpp  toggle_render_quadtree_command_tests.cpp  toggle_render_visited_command_tests.cpp
tests/readers/: csv_reader_tests.cpp  web_reader_tests.cpp  xml_reader_tests.cpp
tests/states/: blue_state_tests.cpp  gray_state_tests.cpp  red_state_tests.cpp  yellow_state_tests.cpp
(+81 files in other folders)
